test/haskell2010/conformance/negative/invalid-pattern-binding.hs
module Main where

(value, value) = (1, 2)

main = value
